k8s/denied-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: denied-pod
  labels:
    app: node  
spec:
  containers:
  - name: busybox
    image: busybox
    command: ["sleep", "3600"]
