k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: my-deploy
  labels:
    app: node-js
spec:
  replicas: 2
  selector:
    matchLabels:
      app: node-js
  template:
    metadata:
      labels:
        app: node-js
    spec:
      containers:
        - name: my-con
          image: 23aparna/node-js-sample:1.0
          ports:
            - containerPort: 5000
          volumeMounts:
            - mountPath: /usr/src/app/data
              name: nodejs-storage
      volumes:
        - name: nodejs-storage
          persistentVolumeClaim:
            claimName: node-js-pvc
