k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-js
spec:
  type: NodePort
  selector:
    app: node-js
  ports:
   - protocol: TCP
     port: 80
     targetPort: 5000
     nodePort: 30007
